2008-02-11  Raul Mateos  <raulofpandora@gmail.com>

	* pandora_console/godmode/agentes/module_manager.php: Closed some html tags.
	Added title for the action icons.

2008-02-09  Raul Mateos  <raulofpandora@gmail.com>

	* pandoradb_data.sql: Solved stupid bug with ending ";". Deleted duplicated
	insert.

2008-02-01  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/estado_*.php: Added code to help admin user
	to create agents and alerts, adding buttons to godmode.
	
	* include/languages/language_es_es.php: Updated text.

2008-01-21 Sancho Lerena <slerena@gmail.com>

	* operation/visual_console/render_view.php: Applied some patches from
	guruevi to improve graphic size and tooltil. Label is still displayed on
	graphic canvas (it could be deleted in the future using an optional switch)

2008-01-11 Sancho Lerena <slerena@gmail.com>

	* config.inc.php: Updated version number for config template.

	* tactical.php: Fixed info from network server (merged from trunk).

	* manage_recontask.php: recontask list better render of information.

2008-01-10 Sancho Lerena <slerena@gmail.com>

        * functions_db.php: Some changes in future generic SQL interface access.

        * pandora_console/include/functions.php: Added generic acces to HTTP 
        parameters.

        * status_monitor.php: Fixed problems detected by Pierre Gaxatte.

        * estado_agente.php: Fixed the same kind of problems (ACL / Group acces)
        and added a Agent search field as request by J.Corona.

        * tactical.php: Rename of generic SQL function access.
        
        * view_server.php: Rename of generic SQL function access.

        * modificar_agente.php: Fixed some render problems, added a Agent search
        option and better formatting.

2008-01-10 Sancho Lerena <slerena@gmail.com>

	* functions_db.php: Added generic SQL access function to get data using
	a free SQL sentence.
	
	* estado_ultimopaquete.php: Uses new Keepalive implementation and render 